feat(app): final fixes
